--- a/src/public/stylesheet/style.scss
+++ b/src/public/stylesheet/style.scss
@@ -6,7 +6,9 @@
 @import "./profil";
 @import "./hubungi-kami";
 @import "./keranjang";
+@import "./pembayaran";
 @import "./detail-produk";
+
 * {
   margin: 0;
   padding: 0;
