--- a/src/views/keranjang.ejs
+++ b/src/views/keranjang.ejs
@@ -225,7 +225,7 @@
             name="telpon"
           />
         </div>
-        <button type="submit" class="btn">Proses Order</button>
+        <button type="submit" class="btn proses-order">Proses Order</button>
       </form>
     </div>
   </div>
