--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -25,7 +25,8 @@
   <body>
     <!-- Body -->
     <%-body%>
-    <script src="/javascript/script.js"></script>
+    <script src="/javascript/pembayaran.js"></script>
+    <script src="/javascript/main.js"></script>
     <script type="text/javascript" src="https://app.sandbox.midtrans.com/snap/snap.js" data-client-key="SET_YOUR_CLIENT_KEY_HERE"></script>
   </head>
   </body>
