--- a/src/views/footer.ejs
+++ b/src/views/footer.ejs
@@ -7,7 +7,8 @@
     <li><a href="/keranjang">Keranjang</a></li>
   </div>
   <div class="copyright">
-    &copy; Copyright 2020 Katring - Developed by Nayaka Yoga Pradipta
+    &copy; Copyright <span class="copyright-year"></span> Katring - Developed by
+    Nayaka Yoga Pradipta
   </div>
   <div class="terms">Privacy – Terms</div>
 </footer>
